--- a/style.css
+++ b/style.css
@@ -1,1 +1,56 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    margin:0;
+    padding:0;
+    border: 0;
+}
+ul,
+li{
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap:15px;
+    align-items: center;
+    padding: 6px;
+}
 
+.header{
+    color: #F9FAF8;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    background-color: #1F2937;
+    padding-left: 120px;
+    padding-right: 120px;
+}
+
+.logo{
+    display: flex;
+    justify-content: flex-end;
+    font-size: 24px;
+    padding: 5px;
+    padding-left: -5px ;
+    font-weight: 600;
+}
+
+body{
+    padding: 0;
+    margin: 0;
+}
+
+.hero{
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+}
+
+h1{
+    font-weight: 900;
+    color: #F9FAF8;
+    font-size: 48px;
+
+}
