--- a/style.css
+++ b/style.css
@@ -1,56 +1,78 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    margin:0;
-    padding:0;
+*{
+    margin: 0;
+    padding: 0;
     border: 0;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Roboto', sans-serif;
+}
+
 ul,
 li{
     text-decoration: none;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap:15px;
-    align-items: center;
-    padding: 6px;
 }
 
 .header{
-    color: #F9FAF8;
     display: flex;
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
+    background-color: #1f2937;
+    padding: 1em 13em;
+}
+
+
+.top-page{
+    display: flex;
+    align-items: center;
     justify-content: space-between;
-    background-color: #1F2937;
-    padding-left: 120px;
-    padding-right: 120px;
+    padding-top: 1em;
 }
 
-.logo{
+.right-side{
     display: flex;
-    justify-content: flex-end;
-    font-size: 24px;
-    padding: 5px;
-    padding-left: -5px ;
-    font-weight: 600;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+    font-size: 18px;
+    color: #E5E7EB;
+    text-wrap: wrap;
 }
 
-body{
-    padding: 0;
-    margin: 0;
+.left-side{
+    font-size: 24px;
+    color:#F9FAF8;
+    font-weight: 900;
 }
 
 .hero{
-    background-color: #1F2937;
     display: flex;
-    justify-content: center;
+    padding: 7em 0em;
+    gap: 13px;
 }
 
-h1{
+.hero-head{
+    font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
-    font-size: 48px;
+    padding-bottom: .3em;
+}
 
+.textbox{
+    font-size: 18px;
+    color: #E5E7EB;
+    padding-bottom: .3em;
+}
+
+.cool-button{
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: .35em 1.5em;
+    border-radius: 8px;
+    font-size: 120%;
+}
+.hero-img{
+    flex-wrap: wrap;
+    width: 100%;
 }
