--- a/style.css
+++ b/style.css
@@ -76,3 +76,114 @@ li{
     flex-wrap: wrap;
     width: 100%;
 }
+
+.info{
+    background-color: #F9FAF8;
+    display: flex;
+    flex-direction: column;
+    padding: 4em 6em;
+}
+
+.info-top{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937
+}
+.images{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 170px;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 2em;
+    text-align: center;
+}
+
+.image-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    
+}
+
+.circly-img{
+    border-radius: 10px;
+    border: solid 3px #1f2937;
+    height: 160px;
+    width: 160px;
+}
+
+.sub{
+    color: darkgray;
+    font-size: 18px;
+}
+
+.quotebox{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding: 3em 5em;
+    font-size: 36px;
+    font-weight: lighter;
+    justify-content: center;
+}
+
+.quote{
+    color: #1f2937;
+}
+
+.quoter{
+    display: flex; 
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 23px;
+}
+
+.call-to-act{
+    background-color: #F9FAF8;
+    padding: 5em 8em;
+    display: flex;
+    justify-content: center;
+}
+
+.callbox{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #3882F6;
+    padding: 2em 1em;
+    width: 80%;
+    height: 60px;
+    border-radius: 8px;
+}
+
+.call-text{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 18px;
+}
+
+.signup{
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: .5em 2em;
+    border: solid 2px white;
+    border-radius: 7px;
+    font-size: large;
+    
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    padding: 2em 2em;
+    color: white;
+}
