--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ li{
 .hero-img{
     flex-wrap: wrap;
     width: 100%;
+    border-radius: 8px;
+    border: solid 2px white;
 }
 
 .info{
@@ -113,7 +115,7 @@ li{
 
 .circly-img{
     border-radius: 10px;
-    border: solid 3px #1f2937;
+    border: solid 3px #3882F6;
     height: 160px;
     width: 160px;
 }
